--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "hash-tabs": "*",
     "raven-js": "^3.1.0",
     "moment": "~2.14.1",
-    "moment-timezone": "~0.5.5"
+    "moment-timezone": "~0.5.5",
+    "cron-parser": "^1.1.0"
   },
   "resolutions": {
     "jquery": "1.11.2",
